--- a/src/main/resources/webapp/static/components/page/home/home.html
+++ b/src/main/resources/webapp/static/components/page/home/home.html
@@ -1,1 +1,9 @@
-<div>加载中</div>
+<div id="page-home">
+    <div id="wrap">
+        <div class="item">
+            <div class="spinner1"></div>
+            <h5>拼命加载中<span class="dot">.</span></h5>
+        </div>
+    </div>
+
+</div>
