后台最新更新 承包商订票

--- a/src/main/resources/webapp/admin/static/components/component/nav/nav.html
+++ b/src/main/resources/webapp/admin/static/components/component/nav/nav.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div class="admin-bread">
-            <span>您好，admin，欢迎您的光临。</span>
+            <span>您好，管理员，欢迎您的光临。</span>
             <ul class="bread">
                 <li><a href="#/{{bread1.key}}" class="{{bread1.class}}">&nbsp;{{bread1.name}}</a></li>
                 <li class="{{bread2.class}}">&nbsp;
