--- a/src/main/resources/webapp/admin/static/components/page/desk/desk.html
+++ b/src/main/resources/webapp/admin/static/components/page/desk/desk.html
@@ -4,9 +4,9 @@
             <div class="panel border-back">
                 <div class="panel-body text-center">
                     <img src="/admin/static/images/admin.jpg" width="120" class="radius-circle"><br>
-                    admin
+                    管理员
                 </div>
-                <div class="panel-foot bg-back border-back">您好，admin，这是您第100次登录，上次登录为2015-09-13。</div>
+                <div class="panel-foot bg-back border-back">您好，管理员!</div>
             </div>
             <br>
             <div class="panel">
