--- a/src/main/resources/webapp/admin/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/admin/static/components/page/bus/bus.html
@@ -19,7 +19,7 @@
                 <td >{{c.online == 0?"停用":"启用"}}</td>
                 <td >
                     <a v-on="click:editBus(c)" class="button border-blue button-little" href="javascript:;">修改</a>
-                    <a class="button border-yellow button-little" v-on="click:delBus(c._id)" href="javascript:;" onclick="{if(confirm('确认删除?')){return true;}return false;}">删除</a>
+                    <a class="button border-yellow button-little" v-on="click:delBus(c._id)" href="javascript:;" >删除</a>
                     <a href="#/home/bus/{{c._id}}" class="button border-blue button-little" href="javascript:;">车位管理</a>
                 </td>
             </tr>
