--- a/src/main/resources/webapp/admin/static/components/page/company/company.html
+++ b/src/main/resources/webapp/admin/static/components/page/company/company.html
@@ -31,7 +31,7 @@
                 <td>{{c.name}}</td>
                 <td>{{c.company}}</td>
                 <td>{{c.mobile}}</td>
-                <td><a v-on="click:editUser(c)" class="button border-blue button-little" href="javascript:;">修改</a> <a class="button border-yellow button-little" v-on="click:delUser(c._id)" href="javascript:;" onclick="{if(confirm('确认删除?')){return true;}return false;}">删除</a> </td></tr>
+                <td><a v-on="click:editUser(c)" class="button border-blue button-little" href="javascript:;">修改</a> <a class="button border-yellow button-little" v-on="click:delUser(c._id)" href="javascript:;">删除</a> </td></tr>
         </table>
 
         <div class="panel-foot text-center">
