--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -2,7 +2,7 @@
     <div class="mui-control-content mui-active">
         <header class="mui-bar-nav mui-bar">
             <h5 class="mui-title">
-                订单查询
+                系统服务
             </h5>
         </header>
         <div class="mui-content">
@@ -23,6 +23,7 @@
                         委托用户
                     </a>
                 </li>
+
             </ul>
         </div>
 
