--- a/src/main/resources/webapp/admin/static/components/page/user/user.html
+++ b/src/main/resources/webapp/admin/static/components/page/user/user.html
@@ -11,12 +11,12 @@
             <!--<input type="button" class="button button-small bg-main" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:dellAllUser" value="删除全部" />-->
         </div>
         <table class="table table-hover">
-            <tr><th width="120">用户名</th><th width="200">邮箱</th><th width="100">手机号码</th><th width="*">OpenID</th><th width="100">订票限制</th><th width="100">用户类型</th><th width="100">登录密码</th><th width="140">操作</th></tr>
+            <tr><th width="120">用户名</th><th width="*">邮箱</th><th width="100">手机号码</th><th width="150">处室</th><th width="100">订票限制</th><th width="100">用户类型</th><th width="100">登录密码</th><th width="140">操作</th></tr>
             <tr v-repeat="c in users">
                 <td>{{c.name}}</td>
                 <td>{{c.email}}</td>
                 <td>{{c.mobile}}</td>
-                <td>{{c.openID}}</td>
+                <td>{{c.department}}</td>
                 <td>{{c.limit?c.limit:1}}</td>
                 <td>{{c.admin == 1?"管理员":"普通用户"}}</td>
                 <td>{{c.password}}</td>
@@ -59,6 +59,14 @@
                             <div class="field">
                                 <input type="text" class="input" v-model="user.mobile" placeholder="请填写手机号">
                                 <div v-show="!validation.mobile" class="input-help  check-error"><ul><li>请填写正确手机号码</li></ul></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="label">
+                                处室
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" v-model="user.department" placeholder="请填写科室">
                             </div>
                         </div>
                         <div class="form-group">
