--- a/src/main/resources/webapp/static/components/page/relation/relation.html
+++ b/src/main/resources/webapp/static/components/page/relation/relation.html
@@ -4,11 +4,11 @@
         <h5 class="mui-title">
             联系人
         </h5>
-        <a class="mui-pull-right mui-icon mui-icon-refresh" v-on="click:getDelegation"></a>
+        <a class="mui-pull-right mui-icon mui-icon-refresh" v-on="click:reload"></a>
     </header>
     <div class="mui-content">
         <h5 class="mui-content-padded">
-            每个用户最多可以绑定三个联系人
+            每个用户最多可以绑定四个联系人或者亲属
         </h5>
         <ul class="mui-table-view">
             <li class="mui-table-view-cell mui-media" v-repeat="u in delegations">
@@ -24,9 +24,31 @@
             </li>
         </ul>
         <div style="padding: 15px;">
-            <a style="padding: 5px;" v-if="delegations.length<3" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/query">
+
+            <a style="padding: 5px;" v-if="delegations.length<4" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/query">
                 <span class="mui-icon mui-icon-plus"></span>
-                添加</a>
+                添加联系人</a>
         </div>
+
+        <ul class="mui-table-view">
+            <li class="mui-table-view-cell mui-media" v-repeat="u in relatives">
+                <a >
+                    <div class="mui-media-body" >
+                        {{u.name}}
+                        <p>{{u.relation}}</p>
+                    </div>
+                    <button class="mui-btn mui-btn-negative mui-btn-outlined" v-on="click:delRel(u._id)">
+                        取消
+                    </button>
+                </a>
+            </li>
+        </ul>
+        <div style="padding: 15px;">
+            <a style="padding: 5px;" v-if="relatives.length<4" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/relatives">
+                <span class="mui-icon mui-icon-plus"></span>
+                添加亲属</a>
+        </div>
+
+        <h5 style="text-align: center">刷新页面查看最新关联。</h5>
     </div>
 </div>
