--- a/src/main/resources/webapp/static/components/page/service/service.html
+++ b/src/main/resources/webapp/static/components/page/service/service.html
@@ -10,7 +10,7 @@
                 <ul class="mui-table-view mui-list" style="margin-top: 15px;">
                     <i class=" mui-pull-left iconfont icon-tuangou"></i>
                     <li class="mui-table-view-cell">
-                        <a class="mui-navigate-right" href="#company">承包商订位
+                        <a class="mui-navigate-right" href="#company">承包商订位查询
                         </a>
                     </li>
                 </ul>
