--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -3,7 +3,7 @@
 
 /*# sourceMappingURL=bind.css.map */
 
-/*!/components/page/search/result/result.scss*/
+/*!/components/page/search/result/result.css*/
 .page-search-result .time-nav {
   text-align: center;
   color: #007aff;
@@ -19,6 +19,8 @@
   .page-search-result .time-nav .time {
     padding-left: 20px;
     padding-right: 20px; }
+
+/*# sourceMappingURL=result.css.map */
 
 /*!/components/page/bus/bus.css*/
 .page-bus {
@@ -120,17 +122,22 @@
 
 /*# sourceMappingURL=bus.css.map */
 
-/*!/components/page/search/search.css*/
-.page-search .form-value {
-  color: #60418c;
-  margin-right: 20px; }
-
-#btn-search {
-  padding: 7px 0;
-  margin-top: 40px;
-  color: #0062cc; }
-
-/*# sourceMappingURL=search.css.map */
+/*!/components/page/search/result/result.scss*/
+.page-search-result .time-nav {
+  text-align: center;
+  color: #007aff;
+  line-height: 44px; }
+  .page-search-result .time-nav .mui-action {
+    width: 40px;
+    margin: 3px;
+    color: #007aff;
+    font-size: 20px;
+    padding: 5px 1px;
+    text-align: center;
+    border: 1px solid #ddd; }
+  .page-search-result .time-nav .time {
+    padding-left: 20px;
+    padding-right: 20px; }
 
 /*!/components/page/company/company.css*/
 .page-company .company-select {
@@ -165,7 +172,7 @@
 
 /*# sourceMappingURL=company.css.map */
 
-/*!/components/page/search/search.scss*/
+/*!/components/page/search/search.css*/
 .page-search .form-value {
   color: #60418c;
   margin-right: 20px; }
@@ -174,6 +181,108 @@
   padding: 7px 0;
   margin-top: 40px;
   color: #0062cc; }
+
+.x-control-group {
+  width: auto;
+  height: auto;
+  padding: 0.625em;
+  box-sizing: border-box;
+  background: #ffffff; }
+
+.x-control-group-title {
+  background-color: #f5f5f5;
+  margin-bottom: 0.625em;
+  padding: 0.625em;
+  border-radius: 4px;
+  color: #555555;
+  font-weight: bold;
+  font-size: 1.125em;
+  cursor: pointer; }
+
+.x-label-edit {
+  padding: 0.5em 0; }
+
+.x-label-edit, .x-label-edit.x-label-left {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -webkit-flex-line-pack: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -moz-box-pack: center;
+  -moz-align-item: center;
+  -ms-flex-pack: center;
+  -ms-flex-align: center;
+  flex-align: center;
+  align-content: center;
+  align-items: center; }
+
+.x-label20.x-label-edit .x-label {
+  width: 30%; }
+
+.x-label-edit .x-label {
+  display: block; }
+
+.x-label {
+  margin: 0;
+  padding: 0 0.625em 0 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-weight: normal; }
+
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold; }
+
+.x-label20.x-label-edit .x-edit {
+  width: 70%; }
+
+.x-label-edit .x-edit {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1; }
+
+select.form-control {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  padding: 0 12px;
+  padding-right: 16px;
+  text-indent: 0px;
+  background-image: url(/static/images/chevron.png);
+  background-repeat: no-repeat;
+  background-position: 100%; }
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  margin: 0; }
+
+.form-control:focus {
+  border-color: #356635;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
+
+/*# sourceMappingURL=search.css.map */
 
 /*!/components/page/home/home.css*/
 .spinner1 {
@@ -244,6 +353,124 @@
     text-align: center;
 }
 
+/*!/components/page/search/search.scss*/
+.page-search .form-value {
+  color: #60418c;
+  margin-right: 20px; }
+
+#btn-search {
+  padding: 7px 0;
+  margin-top: 40px;
+  color: #0062cc; }
+
+.x-control-group {
+  width: auto;
+  height: auto;
+  padding: 0.625em;
+  box-sizing: border-box;
+  background: #ffffff; }
+
+.x-control-group-title {
+  background-color: #f5f5f5;
+  margin-bottom: 0.625em;
+  padding: 0.625em;
+  border-radius: 4px;
+  color: #555555;
+  font-weight: bold;
+  font-size: 1.125em;
+  cursor: pointer; }
+
+.x-label-edit {
+  padding: 0.5em 0; }
+
+.x-label-edit, .x-label-edit.x-label-left {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -webkit-flex-line-pack: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -moz-box-pack: center;
+  -moz-align-item: center;
+  -ms-flex-pack: center;
+  -ms-flex-align: center;
+  flex-align: center;
+  align-content: center;
+  align-items: center; }
+
+.x-label20.x-label-edit .x-label {
+  width: 30%; }
+
+.x-label-edit .x-label {
+  display: block; }
+
+.x-label {
+  margin: 0;
+  padding: 0 0.625em 0 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-weight: normal; }
+
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold; }
+
+.x-label20.x-label-edit .x-edit {
+  width: 70%; }
+
+.x-label-edit .x-edit {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1; }
+
+select.form-control {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  padding: 0 12px;
+  padding-right: 16px;
+  text-indent: 0px;
+  background-image: url(/static/images/chevron.png);
+  background-repeat: no-repeat;
+  background-position: 100%; }
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  margin: 0; }
+
+.form-control:focus {
+  border-color: #356635;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
+
+/*!/components/page/order/order.scss*/
+.page-order {
+  height: 100%; }
+  .page-order .mui-control-content {
+    height: 100%; }
+    .page-order .mui-control-content .mui-content {
+      padding-bottom: 50px; }
+
 /*!/components/page/service/service.css*/
 .page-service {
   height: 100%; }
@@ -254,14 +481,6 @@
 
 /*# sourceMappingURL=service.css.map */
 
-/*!/components/page/order/order.scss*/
-.page-order {
-  height: 100%; }
-  .page-order .mui-control-content {
-    height: 100%; }
-    .page-order .mui-control-content .mui-content {
-      padding-bottom: 50px; }
-
 /*!/components/page/service/service.scss*/
 .page-service {
   height: 100%; }
@@ -270,6 +489,70 @@
     .page-service .mui-control-content .mui-content {
       padding-bottom: 50px; }
 
+/*!/components/page/company/company.scss*/
+.page-company .company-select {
+  color: #60418c;
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  display: inline-block;
+  width: 120px;
+  transform: translateY(-50%);
+  font-size: 17px; }
+.page-company .mui-table-view-cell > a:not(.mui-btn).mui-active {
+  background-color: #fff; }
+.page-company .table {
+  background-color: #fff;
+  width: 100%;
+  max-width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0; }
+  .page-company .table th {
+    border-bottom: 2px solid #ddd;
+    vertical-align: bottom;
+    text-align: center;
+    padding: 8px;
+    font-weight: bold; }
+  .page-company .table td {
+    border-top: 1px solid #ddd;
+    padding: 8px;
+    vertical-align: top;
+    text-align: center;
+    font-weight: normal; }
+
+/*!/components/page/order/order.css*/
+.page-order {
+  height: 100%; }
+  .page-order .mui-control-content {
+    height: 100%; }
+    .page-order .mui-control-content .mui-content {
+      padding-bottom: 50px; }
+
+/*# sourceMappingURL=order.css.map */
+
+/*!/components/page/order/orderdetail/orderdetail.css*/
+@-webkit-keyframes twinkling{    /*透明度由0到1*/
+  0%{
+    background-color: yellow;
+  }
+  60%{
+    background-color: #ccc;
+  }
+}
+
+@keyframes twinkling{    /*透明度由0到1*/
+0%{
+  background-color: yellow;
+}
+60%{
+  background-color: #ccc;
+}
+}
+
+.twinkling {
+  -webkit-animation: twinkling 2s infinite ease;
+  animation: twinkling 2s infinite ease;
+}
 /*!/components/page/bus/bus.scss*/
 .page-bus {
   background-color: #fff;
@@ -367,66 +650,6 @@
     height: 21px;
     float: right;
     width: 80px; }
-
-/*!/components/page/company/company.scss*/
-.page-company .company-select {
-  color: #60418c;
-  position: absolute;
-  top: 50%;
-  right: 15px;
-  display: inline-block;
-  width: 120px;
-  transform: translateY(-50%);
-  font-size: 17px; }
-.page-company .mui-table-view-cell > a:not(.mui-btn).mui-active {
-  background-color: #fff; }
-.page-company .table {
-  background-color: #fff;
-  width: 100%;
-  max-width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0; }
-  .page-company .table th {
-    border-bottom: 2px solid #ddd;
-    vertical-align: bottom;
-    text-align: center;
-    padding: 8px;
-    font-weight: bold; }
-  .page-company .table td {
-    border-top: 1px solid #ddd;
-    padding: 8px;
-    vertical-align: top;
-    text-align: center;
-    font-weight: normal; }
-
-/*!/components/page/order/order.css*/
-.page-order {
-  height: 100%; }
-  .page-order .mui-control-content {
-    height: 100%; }
-    .page-order .mui-control-content .mui-content {
-      padding-bottom: 50px; }
-
-/*# sourceMappingURL=order.css.map */
-
-/*!/components/page/search/result/result.css*/
-.page-search-result .time-nav {
-  text-align: center;
-  color: #007aff;
-  line-height: 44px; }
-  .page-search-result .time-nav .mui-action {
-    width: 40px;
-    margin: 3px;
-    color: #007aff;
-    font-size: 20px;
-    padding: 5px 1px;
-    text-align: center;
-    border: 1px solid #ddd; }
-  .page-search-result .time-nav .time {
-    padding-left: 20px;
-    padding-right: 20px; }
-
-/*# sourceMappingURL=result.css.map */
 
 /*!/static/css/layer.css*/
 /* layer弹层移动版样式 */
@@ -3300,7 +3523,7 @@ select
     height: auto;
     margin-top: 1px;
 
-    border: 0 !important;
+    border: 0 ;
     background-color: #fff;
 }
 select:focus
