--- a/src/main/resources/webapp/admin/static/components/page/user/user.html
+++ b/src/main/resources/webapp/admin/static/components/page/user/user.html
@@ -11,13 +11,14 @@
             <!--<input type="button" class="button button-small bg-main" data-target="#user-dialog" data-mask="1" data-width="50%"  v-on="click:dellAllUser" value="删除全部" />-->
         </div>
         <table class="table table-hover">
-            <tr><th width="120">用户名</th><th width="*">邮箱</th><th width="100">手机号码</th><th width="150">处室</th><th width="100">订票限制</th><th width="100">用户类型</th><th width="100">登录密码</th><th width="140">操作</th></tr>
+            <tr><th width="120">用户名</th><th width="*">邮箱</th><th width="100">手机号码</th><th width="150">处室</th><th width="150">科室</th><th width="100">用户类型</th><th width="100">登录密码</th><th width="140">操作</th></tr>
             <tr v-repeat="c in users">
                 <td>{{c.name}}</td>
                 <td>{{c.email}}</td>
                 <td>{{c.mobile}}</td>
                 <td>{{c.department}}</td>
-                <td>{{c.limit?c.limit:1}}</td>
+                <td>{{c.unit}}</td>
+                <!--<td>{{c.limit?c.limit:1}}</td>-->
                 <td>{{c.admin == 1?"管理员":"普通用户"}}</td>
                 <td>{{c.password}}</td>
                 <td><a v-on="click:editUser(c)" class="button border-blue button-little" href="javascript:;">修改</a> <a class="button border-yellow button-little" v-on="click:delUser(c._id)" href="javascript:;">删除</a> </td></tr>
@@ -66,7 +67,15 @@
                                 处室
                             </div>
                             <div class="field">
-                                <input type="text" class="input" v-model="user.department" placeholder="请填写科室">
+                                <input type="text" class="input" v-model="user.department" placeholder="请填写处室">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="label">
+                                科室
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" v-model="user.unit" placeholder="请填写科室">
                             </div>
                         </div>
                         <div class="form-group">
