前端最新修改

--- a/src/main/resources/webapp/static/components/page/search/search.html
+++ b/src/main/resources/webapp/static/components/page/search/search.html
@@ -1,4 +1,4 @@
-<div class="page-search">
+<div class="page-search" >
     <div class="mui-control-content mui-active">
         <header class="mui-bar-nav mui-bar">
             <h5 class="mui-title">
@@ -18,7 +18,7 @@
 
 <div style="text-align: center;margin-top: 20px;">
     <button type="button" v-on="click:onSearch('昌江')" class="mui-btn mui-btn-primary mui-btn-block">昌江</button>
-    <button type="button" v-on="click:onSearch('海口')"  class="mui-btn mui-btn-primary mui-btn-block">海口</button>
+    <button type="button" v-on="click:onSearch('海口')"  class="mui-btn mui-btn-green mui-btn-block">海口</button>
 </div>
 
             </div>
