--- a/src/main/resources/webapp/static/components/page/order/order.html
+++ b/src/main/resources/webapp/static/components/page/order/order.html
@@ -2,7 +2,7 @@
     <div class="mui-control-content mui-active">
         <header class="mui-bar-nav mui-bar">
             <h5 class="mui-title">
-                订单列表
+                已选列表
             </h5>
             <a class="mui-icon mui-icon-refresh mui-pull-right" v-on="click:reload"></a>
         </header>
