--- a/src/main/resources/webapp/static/components/page/relation/query/query.html
+++ b/src/main/resources/webapp/static/components/page/relation/query/query.html
@@ -10,7 +10,7 @@
             <li class="mui-table-view-cell mui-media-body" v-repeat="u in list">
                 {{u.name}}
                 <p>{{u.email}}</p>
-                <button class="mui-btn mui-btn-outlined mui-btn-negative" v-on="click:addDelegation(u._id)">委托</button>
+                <button class="mui-btn mui-btn-outlined mui-btn-negative" v-on="click:addDelegation(u._id)">添加</button>
             </li>
         </ul>
     </div>
