--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -20,10 +20,42 @@
                 <i class=" mui-pull-left iconfont icon-users"></i>
                 <li class="mui-table-view-cell">
                     <a class="mui-navigate-right" href="#relation">
-                        委托用户
+                        代订座人维护
                     </a>
                 </li>
 
+                <i class=" mui-pull-left iconfont icon-tuangou"></i>
+                <li class="mui-table-view-cell">
+                    <a class="mui-navigate-right" href="#company">承包商订位查询
+                    </a>
+                </li>
+
+            </ul>
+
+            <h5 style="margin-top: 60px" class="mui-content-padded">其他应用</h5>
+            <ul class="mui-table-view mui-list ellipsis2">
+                <i class=" mui-pull-left iconfont icon-plane"></i>
+                <li class="mui-table-view-cell mui-media">
+                    <a class="mui-navigate-right" href="http://m.ctrip.com/html5/flight/#&do_not_show_add_to_home_tip=1">
+                        <div class="mui-media-body">
+                            机票预订
+                            <p class="mui-ellipsis">
+                                全国特价机票预订
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <i class=" mui-pull-left iconfont icon-train"></i>
+                <li class="mui-table-view-cell mui-media">
+                    <a class="mui-navigate-right" href="http://m.ctrip.com/webapp/train/">
+                        <div class="mui-media-body">
+                            火车票代购
+                            <p class="mui-ellipsis">
+                                车票快递，自由选座
+                            </p>
+                        </div>
+                    </a>
+                </li>
             </ul>
         </div>
 
