--- a/src/main/resources/webapp/static/components/page/search/search.css
+++ b/src/main/resources/webapp/static/components/page/search/search.css
@@ -106,3 +106,10 @@ select.form-control {
   border-color: #356635;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
+
+.data-list {
+  padding: 0; }
+  .data-list li {
+    list-style: none;
+    height: 32px;
+    background-color: #fff; }
