--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -282,6 +282,13 @@ select.form-control {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
 
+.data-list {
+  padding: 0; }
+  .data-list li {
+    list-style: none;
+    height: 32px;
+    background-color: #fff; }
+
 /*# sourceMappingURL=search.css.map */
 
 /*!/components/page/home/home.css*/
@@ -462,6 +469,13 @@ select.form-control {
   border-color: #356635;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
+
+.data-list {
+  padding: 0; }
+  .data-list li {
+    list-style: none;
+    height: 32px;
+    background-color: #fff; }
 
 /*!/components/page/order/order.scss*/
 .page-order {
