--- a/src/main/resources/webapp/static/components/page/search/search.html
+++ b/src/main/resources/webapp/static/components/page/search/search.html
@@ -1,56 +1,39 @@
-<div class="page-search" v-style="style" style="overflow-y:auto">
+<div class="page-search" >
     <div class="mui-control-content mui-active">
         <header class="mui-bar-nav mui-bar">
             <h5 class="mui-title">
                 班车查询
             </h5>
         </header>
-        <div class="mui-content">
-
-            <!--  <div class="x-control-group">
-
-                  <div class="x-label-edit x-label20">
-                      <label class="x-label ">发车时间</label>
-                      <div class="x-edit" >
-                          &lt;!&ndash;<select  v-model="search.date" options="date" class="form-control"><option value="">请选择...</option></select>&ndash;&gt;
-
-                      </div>
-
-                  </div>
-
-                  <div style="text-align: center;margin-top: 20px;">
-                      <button type="button" v-on="click:onSearch('昌江')" class="mui-btn mui-btn-primary mui-btn-block">昌江</button>
-                      <button type="button" v-on="click:onSearch('海口')"  class="mui-btn mui-btn-green mui-btn-block">海口</button>
-                  </div>
-
-              </div>-->
-
-            <h5 class="mui-content-padded">出发时间</h5>
-            <div class="mui-card">
-                <form class="mui-input-group">
-                    <div class="mui-input-row mui-radio" v-repeat="d in date" v-on="click:onSelectDate(d)">
-                        <label>{{d.text}}</label>
-                        <input name="radio1" type="radio" >
-                    </div>
-                </form>
-            </div>
-            <h5 class="mui-content-padded">目的地</h5>
-            <div class="mui-card">
-                <ul class="mui-table-view">
-                    <li class="mui-table-view-cell" v-on="click:onSearch('昌江')">
-                        <a class="mui-navigate-right">
-                            前往昌江
-                        </a>
-                    </li>
-                    <li class="mui-table-view-cell" v-on="click:onSearch('海口')">
-                        <a class="mui-navigate-right">
-                            前往海口
-                        </a>
-                    </li>
-                </ul>
+        <div class="mui-content mui-scroll-wrapper">
+            <div class="mui-scroll">
+                <h5 class="mui-content-padded">出发时间</h5>
+                <div class="mui-card">
+                    <form class="mui-input-group">
+                        <div class="mui-input-row mui-radio" v-repeat="d in date" v-on="click:onSelectDate(d)">
+                            <label>{{d.text}}</label>
+                            <input name="radio1" type="radio" >
+                        </div>
+                    </form>
+                </div>
+                <h5 class="mui-content-padded">目的地</h5>
+                <div class="mui-card">
+                    <ul class="mui-table-view">
+                        <li class="mui-table-view-cell" v-on="click:onSearch('昌江')">
+                            <a class="mui-navigate-right">
+                                前往昌江
+                            </a>
+                        </li>
+                        <li class="mui-table-view-cell" v-on="click:onSearch('海口')">
+                            <a class="mui-navigate-right">
+                                前往海口
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <h5 class="mui-content-padded">&nbsp;</h5>
             </div>
         </div>
-
     </div>
     <c-nav view="search">
     </c-nav>
