--- a/src/main/resources/webapp/admin/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/admin/static/components/page/bus/bus.html
@@ -2,7 +2,7 @@
     <div class="panel admin-panel">
         <div class="panel-head">
             <strong>
-                车辆列表
+                发车管理
             </strong>
         </div>
         <div class="padding border-bottom">
