--- a/src/main/resources/webapp/static/components/page/order/orderdetail/orderdetail.html
+++ b/src/main/resources/webapp/static/components/page/order/orderdetail/orderdetail.html
@@ -8,21 +8,23 @@
     <div class="mui-content">
 
         <div class="mui-card twinkling" style="padding: 8px;">
-            <div>
-                <span STYLE="color: red;font-weight: bold">{{ticket.bus.sn}}</span>
+            <h5 style="text-align: right;padding-top: 5px;">
+               <span style="font-size: 16px;font-weight: bold;color: #000;float: left">{{ticket.user.name}}</span>
+                <span style="color: #666;">{{ticket.user.department}}{{ticket.user.unit}}</span>
+            </h5>
+            <div style="text-align: center;color: red;font-weight: bold;font-size: 25px;margin: 5px 0;font-weight: bold;">
+                {{ticket.bus.name}} {{ticket.seat.sn}}号座
             </div>
             <div >
-                <span>{{ticket.date}} {{ticket.bus.goff}} 开</span><span style="float: right"> {{ticket.seat.sn}}座</span>
+                <span>   {{ticket.bus.line}}</span><span style="float: right">{{ticket.bus.goff}} 开</span>
             </div>
-            <div style="text-align: center">
-                <h3>方向：{{ticket.bus.destination}}</h3>
+            <div style="text-align: right">
+                <h5>{{ticket.date}} </h5>
             </div>
             <h5 style="text-align: center">
-                {{ticket.bus.line}}
+
             </h5>
-            <h5 style="text-align: right;padding-top: 5px;">
-                <span style="color: #666;float: left">{{ticket.user.department}}{{ticket.user.unit}}</span> <span style="font-size: 16px;font-weight: bold;color: #000;">{{ticket.user.name}}</span>
-            </h5>
+
         </div>
 
     </div>
