--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -16,12 +16,12 @@
                 <a class="mui-navigate-right" v-on="click:selectBus(r.id,search.date)">
                     <img style="max-width: 62px;width: 62px;height: 62px;" class="mui-media-object mui-pull-left" v-attr="src:r.src||'/admin/static/images/128.png'">
                     <div class="mui-media-body">
-                        <h4 style="color: blue">{{r.sn}}</h4>
-                        <div style="color: green">{{r.whither}}方向 {{r.order}}/{{r.void + r.order}}</div>
+                        <h4 style="color: blue;font-weight: bold;font-size: 20px;"> {{r.line}}</h4>
+                        <div style="color: green">{{r.name}} {{r.order}}/{{r.void + r.order}}</div>
                         <p>
                             {{r.date}}至{{r.arrive}}
                         <h5 class="mui-ellipsis-2">
-                            {{r.line}}
+
                         </h5>
                         </p>
                     </div>
