--- a/src/main/resources/webapp/static/components/page/bus/bus.css
+++ b/src/main/resources/webapp/static/components/page/bus/bus.css
@@ -1,11 +1,14 @@
 .page-bus {
   background-color: #fff;
   height: 100%; }
+  .page-bus .user-bar {
+    top: 45px;
+    background-color: #fff; }
   .page-bus .mui-scroll-wrapper {
-    background-color: #ccc; }
+    background-color: #fff; }
   .page-bus .mui-scroll {
     padding: 10px;
-    background-color: #efeff4; }
+    background-color: #fff; }
   .page-bus .mui-table-view-cell.mui-active {
     background-color: #fff; }
   .page-bus .bus-header {
@@ -31,9 +34,16 @@
   .page-bus .bus-body {
     width: 100%;
     text-align: center;
-    background-color: #efeff4; }
+    background-color: #fff; }
     .page-bus .bus-body td {
       padding: 4px 10px; }
+      .page-bus .bus-body td .user-name {
+        position: absolute;
+        bottom: -12px;
+        color: #000;
+        width: 100%;
+        padding: 0 10px;
+        left: 0; }
     @media screen and (max-width: 768px) {
       .page-bus .bus-body a {
         display: block;
