--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -2,31 +2,18 @@
     <header class="mui-bar mui-bar-nav">
         <h5 class="mui-title">{{bus.sn}}
         </h5>
-        <a class=" mui-icon mui-icon-left-nav mui-pull-left" href="#/search/result"></a>
-        <a class="mui-icon  mui-icon-refresh mui-pull-right" v-on="click:reloadSeat"></a>
+        <a class=" mui-icon mui-icon-left-nav mui-pull-left" v-on="click:backTo('search/result')"></a>
+        <a class="mui-icon  mui-icon-home-filled mui-pull-right" href="#search"></a>
     </header>
     <div class="mui-content">
-        <ul class="mui-table-view" style="margin-top: 0">
-            <li class="mui-table-view-cell mui-media">
-                <div class="mui-media-body">
-                    <span style="font-weight: bold">方向：{{bus.destination}}</span>
-                    <p class='mui-ellipsis' style="font-size: 12px">
-                        {{search.date}}
-                    </p>
-                </div>
-                <button class="mui-btn mui-btn-primary" v-on="click:orderSeat">
-                    提交预订
-                </button>
-            </li>
-        </ul>
-        <ul class="mui-table-view">
-            <li class="mui-table-view-cell" style="padding:6px 15px;line-height: 35px;">
-                {{selectText}}
-                    <select style="width: 120px;height: 35px;" class=" mui-pull-right form-control" v-model="selectDelegate" options="delegate"></select>
-            </li>
-        </ul>
+        <nav class="mui-bar mui-bar-tab user-bar">
+            <a v-repeat="u in delegate" class="mui-tab-item" v-on="click:selectUser(u)" v-class="mui-active:u.value==selectDelegate.value" >
+                <span class="mui-icon mui-icon-contact"></span>
+                <span class="mui-tab-label">{{u.text}}</span>
+            </a>
+        </nav>
     </div>
-    <div class=" mui-scroll-wrapper" style="top:155px;">
+    <div class=" mui-scroll-wrapper" style="top:95px;">
         <div class="mui-scroll" >
             <div class="bus-header">
                 <span>车头方向</span>
@@ -36,8 +23,8 @@
             <table class="bus-body">
                 <tr v-repeat="r in bus.rows">
                     <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-on="click:selectSeat(this,r,$index)" v-class="seatClass(r,$index)" style="position: relative;">
-                        <a class="iconfont" v-text="getText(r,$index)"  >
-                        </a>
+                        <a class="iconfont" v-text="getText(r,$index)"  ></a>
+                        <p class="user-name" v-text="getSeatUserName(r,$index)"></p>
                     </td>
                 </tr>
             </table>
