--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -26,11 +26,14 @@
 .page-bus {
   background-color: #fff;
   height: 100%; }
+  .page-bus .user-bar {
+    top: 45px;
+    background-color: #fff; }
   .page-bus .mui-scroll-wrapper {
-    background-color: #ccc; }
+    background-color: #fff; }
   .page-bus .mui-scroll {
     padding: 10px;
-    background-color: #efeff4; }
+    background-color: #fff; }
   .page-bus .mui-table-view-cell.mui-active {
     background-color: #fff; }
   .page-bus .bus-header {
@@ -56,9 +59,16 @@
   .page-bus .bus-body {
     width: 100%;
     text-align: center;
-    background-color: #efeff4; }
+    background-color: #fff; }
     .page-bus .bus-body td {
       padding: 4px 10px; }
+      .page-bus .bus-body td .user-name {
+        position: absolute;
+        bottom: -12px;
+        color: #000;
+        width: 100%;
+        padding: 0 10px;
+        left: 0; }
     @media screen and (max-width: 768px) {
       .page-bus .bus-body a {
         display: block;
@@ -180,6 +190,113 @@
     .page-search .mui-control-content .mui-content {
       padding-bottom: 50px; }
 
+.x-control-group {
+  width: auto;
+  height: auto;
+  padding: 0.625em;
+  box-sizing: border-box;
+  background: #ffffff; }
+
+.x-control-group-title {
+  background-color: #f5f5f5;
+  margin-bottom: 0.625em;
+  padding: 0.625em;
+  border-radius: 4px;
+  color: #555555;
+  font-weight: bold;
+  font-size: 1.125em;
+  cursor: pointer; }
+
+.x-label-edit {
+  padding: 0.5em 0; }
+
+.x-label-edit, .x-label-edit.x-label-left {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -webkit-flex-line-pack: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -moz-box-pack: center;
+  -moz-align-item: center;
+  -ms-flex-pack: center;
+  -ms-flex-align: center;
+  flex-align: center;
+  align-content: center;
+  align-items: center; }
+
+.x-label20.x-label-edit .x-label {
+  width: 30%; }
+
+.x-label-edit .x-label {
+  display: block; }
+
+.x-label {
+  margin: 0;
+  padding: 0 0.625em 0 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-weight: normal; }
+
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold; }
+
+.x-label20.x-label-edit .x-edit {
+  width: 70%; }
+
+.x-label-edit .x-edit {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1; }
+
+select.form-control {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  padding: 0 12px;
+  padding-right: 16px;
+  text-indent: 0px;
+  background-image: url(/static/images/chevron.png);
+  background-repeat: no-repeat;
+  background-position: 100%; }
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  margin: 0; }
+
+.form-control:focus {
+  border-color: #356635;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
+
+.data-list {
+  padding: 0; }
+  .data-list li {
+    list-style: none;
+    height: 32px;
+    background-color: #fff; }
+
 /*# sourceMappingURL=search.css.map */
 
 /*!/components/page/home/home.css*/
@@ -259,6 +376,113 @@
     .page-search .mui-control-content .mui-content {
       padding-bottom: 50px; }
 
+.x-control-group {
+  width: auto;
+  height: auto;
+  padding: 0.625em;
+  box-sizing: border-box;
+  background: #ffffff; }
+
+.x-control-group-title {
+  background-color: #f5f5f5;
+  margin-bottom: 0.625em;
+  padding: 0.625em;
+  border-radius: 4px;
+  color: #555555;
+  font-weight: bold;
+  font-size: 1.125em;
+  cursor: pointer; }
+
+.x-label-edit {
+  padding: 0.5em 0; }
+
+.x-label-edit, .x-label-edit.x-label-left {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-flow: row;
+  -webkit-box-align: center;
+  -webkit-box-pack: center;
+  -webkit-flex-line-pack: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -moz-box-pack: center;
+  -moz-align-item: center;
+  -ms-flex-pack: center;
+  -ms-flex-align: center;
+  flex-align: center;
+  align-content: center;
+  align-items: center; }
+
+.x-label20.x-label-edit .x-label {
+  width: 30%; }
+
+.x-label-edit .x-label {
+  display: block; }
+
+.x-label {
+  margin: 0;
+  padding: 0 0.625em 0 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-weight: normal; }
+
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold; }
+
+.x-label20.x-label-edit .x-edit {
+  width: 70%; }
+
+.x-label-edit .x-edit {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1; }
+
+select.form-control {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  padding: 0 12px;
+  padding-right: 16px;
+  text-indent: 0px;
+  background-image: url(/static/images/chevron.png);
+  background-repeat: no-repeat;
+  background-position: 100%; }
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  margin: 0; }
+
+.form-control:focus {
+  border-color: #356635;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
+
+.data-list {
+  padding: 0; }
+  .data-list li {
+    list-style: none;
+    height: 32px;
+    background-color: #fff; }
+
 /*!/components/page/order/order.scss*/
 .page-order {
   height: 100%; }
@@ -267,7 +491,8 @@
     .page-order .mui-control-content .mui-content {
       padding-bottom: 50px; }
 
-/*!/components/page/service/service.css*/
+/*!/components/page/validate/validate.css*/
+
 .page-service {
   height: 100%; }
   .page-service .mui-control-content {
@@ -275,15 +500,52 @@
     .page-service .mui-control-content .mui-content {
       padding-bottom: 50px; }
 
-/*# sourceMappingURL=service.css.map */
+@-webkit-keyframes twinkling {
+  /*透明度由0到1*/
+  0% {
+    background-color: yellow; }
+  60% {
+    background-color: #ccc; } }
+@keyframes twinkling {
+  /*透明度由0到1*/
+  0% {
+    background-color: yellow; }
+  60% {
+    background-color: #ccc; } }
+.twinkling {
+  -webkit-animation: twinkling 2s infinite ease;
+  animation: twinkling 2s infinite ease; }
 
-/*!/components/page/service/service.scss*/
+/*# sourceMappingURL=validate.css.map */
+
+/*!/components/page/validate/validate.scss*/
+
 .page-service {
   height: 100%; }
   .page-service .mui-control-content {
     height: 100%; }
     .page-service .mui-control-content .mui-content {
       padding-bottom: 50px; }
+
+@-webkit-keyframes twinkling {
+  /*透明度由0到1*/
+  0% {
+    background-color: yellow; }
+
+  60% {
+    background-color: #ccc; } }
+
+@keyframes twinkling {
+  /*透明度由0到1*/
+  0% {
+    background-color: yellow; }
+
+  60% {
+    background-color: #ccc; } }
+
+.twinkling {
+  -webkit-animation: twinkling 2s infinite ease;
+  animation: twinkling 2s infinite ease; }
 
 /*!/components/page/company/company.scss*/
 .page-company .company-select {
@@ -353,11 +615,14 @@
 .page-bus {
   background-color: #fff;
   height: 100%; }
+  .page-bus .user-bar {
+    top: 45px;
+    background-color: #fff; }
   .page-bus .mui-scroll-wrapper {
-    background-color: #ccc; }
+    background-color: #fff; }
   .page-bus .mui-scroll {
     padding: 10px;
-    background-color: #efeff4; }
+    background-color: #fff; }
   .page-bus .mui-table-view-cell.mui-active {
     background-color: #fff; }
   .page-bus .bus-header {
@@ -383,9 +648,16 @@
   .page-bus .bus-body {
     width: 100%;
     text-align: center;
-    background-color: #efeff4; }
+    background-color: #fff; }
     .page-bus .bus-body td {
       padding: 4px 10px; }
+      .page-bus .bus-body td .user-name {
+        position: absolute;
+        bottom: -12px;
+        color: #000;
+        width: 100%;
+        padding: 0 10px;
+        left: 0; }
     @media screen and (max-width: 768px) {
       .page-bus .bus-body a {
         display: block;
